# pydscollections

./: .gitignore  LICENSE  README.md  pyproject.toml
abstract/: collections.py
docs/: overview.md
src/dscollections/: __init__.py  graph.py  heap.py  linear.py  tree.py
tests/: test_linear.py  test_tree_graph_heap.py
